pxc/tests/test_01_px/up7.px

namespace up2;
import io;

function {t, f} void values_vector(vector{t}& v)
{
  uint sz = v.size();
  for (uint i = 0; i < sz; ++i) {
    f(v[i]);
  }
}

function {t, f} void keys_vector(vector{t}& v)
{
  uint sz = v.size();
  for (uint i = 0; i < sz; ++i) {
    f(i);
  }
}

function void foo(vector{int}& v) {
  int x;
  function {t} void add(t y) { x += y; }
  // macro m1 function void(int y) { x += y; };
  macro m1{t} add{t};
  values_vector{int, m1{t}}(v); // error
  io::println(x);
}

vector{int} a.resize(101);
for (int i = 0; i < a.size(); ++i) {
  a[i] = i;
}
foo(a);

